2A/05_Projet_GL/src/test/deca/context/invalid/complet/01_duplication_decl_class.deca
// Description :
//      duplication de la déclaration d'une classe 
// Resultats :
//    ligne 12 : la classe A est deja déclarée
// Historique :
//  cree le 16/01/2024

class A {

}

class A  {
    
}